Исключена лишняя зависимость, добавлен слой dto. Внесены доп поля в Planning и Plot

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-<img src="error_image.png" alt="Ошибка">
+<img src="../static/error_image.png" alt="Ошибка">
 <h1>Ошибка</h1>
 <p th:text="${errorMessage}"></p>
 </body>
